--- a/src/app/pages/components/datatable/datatable.component.scss
+++ b/src/app/pages/components/datatable/datatable.component.scss
@@ -2,6 +2,22 @@ table {
   width: 100%;
 }
 
+.mat-column-PickUpAddress {
+  word-wrap: break-word !important;
+  white-space: unset !important;
+  flex: 0 0 28% !important;
+  width: 28% !important;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  word-break: break-word;
+
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 tr.example-detail-row {
   height: 0;
 }
