--- a/src/app/pages/components/datatable/datatable.component.html
+++ b/src/app/pages/components/datatable/datatable.component.html
@@ -1,73 +1,110 @@
-<table
-  mat-table
-  [dataSource]="dataSource"
-  multiTemplateDataRows
-  class="mat-elevation-z8"
->
-  <ng-container
-    matColumnDef="{{ column }}"
-    *ngFor="let column of columnsToDisplay"
-  >
+<table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+  <ng-container matColumnDef="{{ column }}" *ngFor="let column of columnsToDisplay">
     <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
     <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
   </ng-container>
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
   <ng-container matColumnDef="expandedDetail">
-    <td
-      mat-cell
-      *matCellDef="let element"
-      [attr.colspan]="columnsToDisplay.length"
-    >
-      <div
-        class="example-element-detail"
-        [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'"
-      >
+    <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+      <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
         <div class="example-element-description" style="width: 100%;">
-          <div fxLayout="column">
+          <div fxLayout="column" *ngIf="tableType == 'memberSchedule'">
+            <div class="example-button-container">
+              <button (click)="deleteSchedule(element)" mat-mini-fab color="warn"
+                aria-label="Example icon button with a filter list icon">
+                <mat-icon>delete</mat-icon>
+              </button>
+              <button [matMenuTriggerFor]="appMenu" mat-flat-button color="accent">Actions</button>
+              <mat-menu #appMenu="matMenu">
+                <button mat-menu-item (click)="actionBtn(actions, element)"
+                  *ngFor="let actions of scheduleActions">{{actions.ScheduleStatus}} Schedule</button>
+              </mat-menu>
+            </div>
+          </div>
+          <div fxLayout="column" *ngIf="tableType == 'memberManagement'">
             <div fxLayout="row" fxLayoutGap="10px">
-              <div>
+              <div *ngIf="element.roleInfo">
                 <p>
-                  <b>Roles</b><br /><span
-                    ><mat-hint>Slide to activate or deactivate</mat-hint></span
-                  >
+                  <b>Roles</b><br /><span>
+                    <mat-hint>Slide to activate or deactivate</mat-hint>
+                  </span>
                 </p>
-
                 <div *ngFor="let role of element.roleInfo">
                   <div>
-                    <span
-                      ><mat-slide-toggle
-                        [checked]="role.isRoleActive"
-                        (change)="togData($event, element.userId, role.roleId)"
-                        ><b>{{ role.roleTitle }}</b></mat-slide-toggle
-                      ></span
-                    >
+                    <span>
+                      <mat-slide-toggle [checked]="role.isRoleActive"
+                        (change)="togData($event, element.userId, role.roleId, 'Roles')"><b>{{ role.roleTitle }}</b>
+                      </mat-slide-toggle>
+                    </span>
                   </div>
                 </div>
               </div>
 
-              <!-- sklsfklskflsfls -->
-              <div fxLayout="column">
-                <!-- <button mat-button color="warn">Action</button> -->
+              <div *ngIf="element.MemberId">
+                <p>
+                  <b>Notifications</b><br /><span>
+                    <mat-hint>Activate/deactivate</mat-hint>
+                  </span>
+                </p>
+                <div>
+                  <span>
+                    <mat-slide-toggle (change)="togNotification(element)"
+                      [checked]="element.AllowMemberToRecieveNotification">
+                      <b>{{element.AllowMemberToRecieveNotification ? 'Active' : 'Inactive' }}</b>
+                    </mat-slide-toggle>
+                  </span>
+                </div>
+
               </div>
+              <div>
+                <p>
+                  <b>Add/Remove from Transport Dept</b><br /><span>
+                    <mat-hint>Slide to add or remove member</mat-hint>
+                  </span>
+                </p>
+                <div>
+                  <button mat-flat-button color="accent" style="margin-right: 5px; margin-bottom: 5px;"
+                    (click)="togData({checked: true}, element.userId, null, 'Transport')">Add</button>
+                  <button mat-flat-button color="warn"
+                    (click)="togData({checked: false}, element.userId, null, 'Transport')">Delete Record</button>
+                </div>
+              </div>
+
+              <form class="example-form" *ngIf="element.MemberId" [formGroup]="updateMemberForm"
+                (ngSubmit)="onSubmit(updateMemberForm)">
+                <p>
+                  <b>Update Member Info</b><br /><span>
+                    <!-- <mat-hint>Slide to add or remove member</mat-hint> -->
+                  </span>
+                </p>
+                <mat-form-field class="example-full-width" style="margin-right: 5px;">
+                  <mat-label>Alternative Email</mat-label>
+                  <input matInput formControlName="AlternativeEmailAddress" placeholder="Ex. pat@example.com">
+
+
+                </mat-form-field>
+                <mat-form-field class="example-full-width">
+                  <mat-label>Alternative Phone Number</mat-label>
+                  <input matInput formControlName="AlternativeMobileContact">
+
+
+                </mat-form-field>
+                <button mat-flat-button color="warn" type='submit' (click)="togNotification()">Update Record</button>
+
+              </form>
+
             </div>
           </div>
         </div>
       </div>
     </td>
+
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr
-    mat-row
-    *matRowDef="let element; columns: columnsToDisplay"
-    class="example-element-row"
+  <tr mat-row *matRowDef="let element; columns: columnsToDisplay" class="example-element-row"
     [class.example-expanded-row]="expandedElement === element"
-    (click)="expandedElement = expandedElement === element ? null : element"
-  ></tr>
-  <tr
-    mat-row
-    *matRowDef="let row; columns: ['expandedDetail']"
-    class="example-detail-row"
-  ></tr>
+    (click)="expandedElement = expandedElement === element ? null : element"></tr>
+  <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 </table>
