--- a/src/app/pages/home/components/profile/profile.component.html
+++ b/src/app/pages/home/components/profile/profile.component.html
@@ -1,29 +1,19 @@
 <div fxLayout="column" style="height: 100%;" fxLayoutAlign="center center">
   <mat-card style="margin: 0px;">
     <div fxLayoutAlign="end">
-      <button
-        mat-icon-button
-        color="warn"
-        aria-label="Example icon-button with a heart icon"
-      >
+      <button mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
         <mat-icon>edit</mat-icon>
       </button>
     </div>
 
     <div style="margin: 10px;" fxLayout="column" fxLayoutAlign="center center">
-      <div
-        fxLayout="column"
-        fxLayoutAlign="center center"
-        style="padding-bottom: 20px;"
-      >
+      <div fxLayout="column" fxLayoutAlign="center center" style="padding-bottom: 20px;">
         <div style="padding: 20px;">
           <ngx-avatar [name]="userInfo.FullName"></ngx-avatar>
         </div>
         <div>
           <div style="text-align: center;">
-            <span class="mat-headline" style="color: #f50057;"
-              ><b>{{ userInfo.FullName }} </b></span
-            >
+            <span class="mat-headline" style="color: #f50057;"><b>{{ userInfo.FullName }} </b></span>
             <br />
             <p>{{ userInfo.Email }}</p>
           </div>
@@ -34,72 +24,32 @@
           <div formGroupName="newAddress">
             <mat-form-field appearance="outline" style="width: 100%;">
               <mat-label>Street Address</mat-label>
-              <input
-                matInput
-                placeholder="22, Indianapolis Indiana"
-                formControlName="streetAddress"
-              />
+              <input matInput placeholder="22, Indianapolis Indiana" formControlName="streetAddress" />
             </mat-form-field>
           </div>
-          <div
-            fxLayout.lt-md="column"
-            fxLayout.gt-md="row"
-            fxLayoutAlign="space-between"
-            formGroupName="newAddress"
-          >
-            <mat-form-field
-              appearance="outline"
-              fxFlex="32%"
-              style="width: 100%;"
-            >
+          <div fxLayout.lt-md="column" fxLayout.gt-md="row" fxLayoutAlign="space-between" formGroupName="newAddress">
+            <mat-form-field appearance="outline" fxFlex="32%" style="width: 100%;">
               <mat-label>City</mat-label>
               <input matInput placeholder="city" formControlName="city" />
             </mat-form-field>
-            <mat-form-field
-              appearance="outline"
-              fxFlex="32%"
-              style="width: 100%;"
-            >
+            <mat-form-field appearance="outline" fxFlex="32%" style="width: 100%;">
               <mat-label>State</mat-label>
-              <input
-                matInput
-                placeholder="Indianapolis"
-                formControlName="state"
-              />
+              <input matInput placeholder="Indianapolis" formControlName="state" />
             </mat-form-field>
-            <mat-form-field
-              appearance="outline"
-              fxFlex="32%"
-              style="width: 100%;"
-            >
+            <mat-form-field appearance="outline" fxFlex="32%" style="width: 100%;">
               <mat-label>Zip code</mat-label>
               <input matInput placeholder="94043" formControlName="zipCode" />
             </mat-form-field>
           </div>
           <div fxLayout.lt-md="column" fxLayout.gt-md="row" fxLayoutGap="10px">
-            <mat-form-field
-              appearance="outline"
-              xFlex="100%"
-              fxFlex.gt-sm="60%"
-              style="width: 100%;"
-              formGroupName="newAddress"
-            >
+            <mat-form-field appearance="outline" xFlex="100%" fxFlex.gt-sm="60%" style="width: 100%;"
+              formGroupName="newAddress">
               <mat-label>Country</mat-label>
               <input matInput placeholder="USA" formControlName="country" />
             </mat-form-field>
-            <mat-form-field
-              appearance="outline"
-              xFlex="100%"
-              fxFlex.gt-sm="40%"
-              style="width: 100%;"
-            >
+            <mat-form-field appearance="outline" xFlex="100%" fxFlex.gt-sm="40%" style="width: 100%;">
               <mat-label>Rider Count</mat-label>
-              <input
-                matInput
-                placeholder="USA"
-                type="number"
-                formControlName="ridersCount"
-              />
+              <input matInput placeholder="USA" type="number" formControlName="ridersCount" />
 
               <!-- <mat-hint
                 >The number of people riding with you. This is can change in the
@@ -107,22 +57,20 @@
             </mat-form-field>
           </div>
 
-          <div
-            style="padding-top: 10px; padding-bottom: 20px;"
-            fxLayoutAlign="center center"
-          >
-            <app-custom-btn
-              [disabled]="true"
-              [btnHeight]="'50px'"
-              [btnWidth]="'350px'"
-              [text]="'UPDATE'"
-              [color]="'accent'"
-              [isloading]="false"
-              [type]="'submit'"
-            >
+          <div style="padding-top: 10px; padding-bottom: 20px;" fxLayoutAlign="center center">
+            <app-custom-btn [disabled]="true" [btnHeight]="'50px'" [btnWidth]="'350px'" [text]="'UPDATE'"
+              [color]="'accent'" [isloading]="false" [type]="'submit'">
             </app-custom-btn>
           </div>
         </form>
+        <a mat-flat-button (click)="requestDeleteAccount(false)"><span style="color: brown;">I want to delete my account
+            for
+            this
+            Organization</span></a>
+        <a mat-flat-button (click)="requestDeleteAccount(true)"><span style="color: red;">I want to delete my Account
+            for <span><b>ALL
+                ORGANIZATION</b></span>
+          </span></a>
       </div>
     </div>
   </mat-card>
