--- a/src/app/pages/home/components/schedule-history/schedule-history.component.html
+++ b/src/app/pages/home/components/schedule-history/schedule-history.component.html
@@ -1,11 +1,28 @@
 <div fxLayout="row" fxLayoutGap="20px" style="width: 100%; padding: 20px;">
-  <div class="schedule-cards" fxLayout="row" fxLayoutGap="20px">
-    <app-schedule-cards
-      style="padding-bottom: 20px;"
-      [schedule]="schedule"
-      (editClicked)="editSchedule(schedule)"
-      (deleteClicked)="deleteSchedule(schedule)"
-      *ngFor="let schedule of schedules"
-    ></app-schedule-cards>
+
+
+  <div style="width: 100%;">
+    <mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
+      <mat-tab label="Active Schedules">
+        <ng-template matTabContent>
+          <div class="schedule-cards" fxLayout="row" fxLayoutGap="20px">
+            <app-schedule-cards style="padding-bottom: 20px;" [scheduleActions]="scheduleActions" [schedule]="schedule"
+              (action)="scheduleAction($event)" (deleteClicked)="deleteSchedule(schedule)"
+              *ngFor="let schedule of schedules">
+            </app-schedule-cards>
+          </div>
+        </ng-template>
+      </mat-tab>
+      <mat-tab label="All Schedules">
+        <ng-template matTabContent>
+          <div style="margin: 50px;">
+            <app-datatable (deleteAction)="deleteSchedule($event)" [scheduleActions]="scheduleActions"
+              (memberScheduleAction)="scheduleAction($event)" [tableType]="'memberSchedule'" [dataSource]="allSchedule"
+              [columnsToDisplay]="columnsToDisplay">
+            </app-datatable>
+          </div>
+        </ng-template>
+      </mat-tab>
+    </mat-tab-group>
   </div>
 </div>
