--- a/src/app/pages/home/components/profile/profile.component.html
+++ b/src/app/pages/home/components/profile/profile.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="column" style="height: 100%;" fxLayoutAlign="center center">
   <mat-card style="margin: 0px;">
-    <div fxLayoutAlign="end">
+    <!-- <div fxLayoutAlign="end">
       <button mat-icon-button color="warn" aria-label="Example icon-button with a heart icon">
         <mat-icon>edit</mat-icon>
       </button>
-    </div>
+    </div> -->
 
     <div style="margin: 10px;" fxLayout="column" fxLayoutAlign="center center">
       <div fxLayout="column" fxLayoutAlign="center center" style="padding-bottom: 20px;">
@@ -56,6 +56,18 @@
                 future</mat-hint> -->
             </mat-form-field>
           </div>
+
+          <!-- <div fxLayout.lt-md="column" fxLayout.gt-md="row" fxLayoutGap="10px">
+            <mat-form-field appearance="outline" xFlex="100%" fxFlex.gt-sm="60%" style="width: 100%;"
+              formGroupName="newAddress">
+              <mat-label>Alternative Email</mat-label>
+              <input matInput placeholder="Ex. json@gmail.com" formControlName="country" />
+            </mat-form-field>
+            <mat-form-field appearance="outline" xFlex="100%" fxFlex.gt-sm="40%" style="width: 100%;">
+              <mat-label>Alternative Phone Number</mat-label>
+              <input matInput placeholder="Ex. +13243453444" type="number" formControlName="ridersCount" />
+            </mat-form-field>
+          </div> -->
 
           <div style="padding-top: 10px; padding-bottom: 20px;" fxLayoutAlign="center center">
             <app-custom-btn [disabled]="true" [btnHeight]="'50px'" [btnWidth]="'350px'" [text]="'UPDATE'"
