--- a/src/app/pages/home/components/schedule-history/schedule-history.component.html
+++ b/src/app/pages/home/components/schedule-history/schedule-history.component.html
@@ -3,7 +3,7 @@
     <mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
       <mat-tab label="Active Schedules">
         <ng-template matTabContent>
-          <div class="schedule-cards" fxLayout="row" fxLayoutGap="20px">
+          <div class="schedule-cards" fxLayout="row" style="margin-top: 20px;" fxLayoutGap="20px">
             <app-schedule-cards style="padding-bottom: 20px;" [scheduleActions]="scheduleActions" [schedule]="schedule"
               (action)="scheduleAction($event)" (deleteClicked)="deleteSchedule(schedule)"
               *ngFor="let schedule of schedules">
