--- a/src/app/pages/home/components/schedule-management/schedule-management.component.html
+++ b/src/app/pages/home/components/schedule-management/schedule-management.component.html
@@ -3,7 +3,7 @@
     <mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
       <mat-tab label="Active Schedules">
         <ng-template matTabContent>
-          <div class="schedule-cards" fxLayout="row" fxLayoutGap="20px">
+          <div class="schedule-cards" fxLayout="row" fxLayoutGap="20px" style="margin-top: 20px;">
             <app-schedule-cards (assignClicked)="opendia(schedule)" [type]="'transport'" style="padding-bottom: 20px;"
               [scheduleActions]="scheduleActions" [schedule]="schedule" (action)="scheduleAction($event)"
               (deleteClicked)="deleteSchedule(schedule)" *ngFor="let schedule of schedules">
